k8s-kustomize/services/menu.api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: menu-api
  template:
    metadata:
      labels:
        app: menu-api
    spec:
      containers:
      - name: menu-api
        image: menu-api # must much from ./kustomization.yaml -> images[0].name
        imagePullPolicy: Always 
        ports:
          - containerPort: 80
        readinessProbe:
          httpGet:
            path: /hc
            port: 80
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /liveness
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 5
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
