k8s-kustomize/services/menu.api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
  selector:
    app: menu-api
