k8s-kustomize/services/menu.api/base/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: menu-api
spec:
  gateways:
  - restaurant-gateway
  http:
  - match:
    - uri:
        prefix: /menu
    route:
    - destination:
        host: menu-api
        port:
          number: 80
